tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-2.nn.stderr
error: `~const` is not allowed here
  --> $DIR/super-traits-fail-2.rs:10:12
   |
LL | trait Bar: ~const Foo {}
   |            ^^^^^^
   |
note: this trait is not a `#[const_trait]`, so it cannot have `~const` trait bounds
  --> $DIR/super-traits-fail-2.rs:10:1
   |
LL | trait Bar: ~const Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/super-traits-fail-2.rs:1:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:10:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:10:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:10:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors; 1 warning emitted

